feat: Update to API version 1.1.0
