# api.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: BINJ Hub
   description: The BINJ Hub API that provides authorization and music voting.
-  version: 1.0.0
+  version: 1.1.0
 servers:
   - url: "/api"
 paths:
@@ -10,6 +10,11 @@ paths:
     summary: Redirects to Microsoft OAuth.
     get:
       operationId: AuthRedirect
+      parameters:
+        - name: returnUrl
+          in: query
+          schema:
+            type: string
       responses:
         3XX:
           description: Redirects to Microsoft OAuth.
@@ -18,29 +23,20 @@ paths:
               description: Redirect URL of Microsoft OAuth.
               schema:
                 type: string
-  /auth/status:
-    summary: The auth status of the user.
-    get:
-      operationId: AuthStatus
-      description: Requests the user auth status and profile.
-      responses:
-        default:
-          description: Returns the auth status and profile.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  isLoggedIn:
-                    type: boolean
-                  profile:
-                    $ref: "#/components/schemas/Profile"
   /auth/callback:
     summary: Callback URL for Microsoft OAuth.
     get:
       operationId: AuthCallback
       parameters:
+        - name: returnUrl
+          in: query
+          schema:
+            type: string
         - name: code
+          in: query
+          schema:
+            type: string
+        - name: id_token
           in: query
           schema:
             type: string
@@ -50,12 +46,33 @@ paths:
             type: string
       responses:
         3XX:
-          description: Redirects to the homepage.
+          description: Redirects to the return URL.
           headers:
             Location:
               description: Redirection URL.
               schema:
                 type: string
+  /me:
+    summary: The user making the request.
+    get:
+      operationId: GetMe
+      description: Requests the user profile.
+      responses:
+        default:
+          description: Returns the auth status and profile.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: "#/components/schemas/User"
+        401:
+          $ref: "#/components/responses/Unauthorized"
   /recommendations:
     summary: Song recommendations.
     get:
@@ -90,14 +107,14 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/Recommendation"
-    put:
-      operationId: PutSongRecommendations
+    post:
+      operationId: PostSongRecommendations
       description: Create a song recommendation.
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Recommendation"
+              $ref: "#/components/schemas/RecommendationNew"
       responses:
         default:
           description: The created song recommendation.
@@ -118,23 +135,6 @@ paths:
     summary: A song recommendation.
     parameters:
       - $ref: "#/components/parameters/RecommendationIdPath"
-    get:
-      operationId: GetSongRecommendationId
-      description: Gets a song recommendation by ID.
-      responses:
-        default:
-          description: The song recommendation.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                  message:
-                    type: string
-                  data:
-                    $ref: "#/components/schemas/Recommendation"
     patch:
       operationId: PatchSongRecommendationId
       description: Updates a song recommendation by ID.
@@ -183,32 +183,22 @@ paths:
     summary: Votes for a song recommendation.
     parameters:
       - $ref: "#/components/parameters/RecommendationIdPath"
-    get:
-      operationId: GetRecommendationVote
-      responses:
-        default:
-          description: The votes for a song recommendation.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                  message:
-                    type: string
-                  total:
-                    type: integer
-                  data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Vote"
-    put:
-      operationId: PutRecommendationVote
+    post:
+      operationId: PostRecommendationVote
       description: Create a recommendation vote.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                myVoteUp:
+                  type: boolean
+                myVoteDown:
+                  type: boolean
       responses:
         default:
-          description: The created vote.
+          description: The updated recommendation.
           content:
             application/json:
               schema:
@@ -219,10 +209,31 @@ paths:
                   message:
                     type: string
                   data:
-                    $ref: "#/components/schemas/Vote"
+                    $ref: "#/components/schemas/Recommendation"
 components:
   schemas:
     Recommendation:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        url:
+          type: string
+        reason:
+          type: string
+        voteUp:
+          type: integer
+        voteDown:
+          type: integer
+        myVoteUp:
+          type: boolean
+        myVoteDown:
+          type: boolean
+        user:
+          $ref: "#/components/schemas/User"
+    RecommendationNew:
       type: object
       properties:
         title:
@@ -231,9 +242,6 @@ components:
           type: string
         reason:
           type: string
-        user:
-          $ref: "#/components/schemas/User"
-      required: [title, url, reason]
     User:
       type: object
       properties:
@@ -241,27 +249,6 @@ components:
           type: string
         email:
           type: string
-      required: [name, email]
-    Profile:
-      type: object
-      properties:
-        name:
-          type: string
-        email:
-          type: string
-        voteTimesLeft:
-          type: integer
-      required: [name, email, voteTimesLeft]
-    Vote:
-      type: object
-      properties:
-        id:
-          type: string
-        recommendationId:
-          type: string
-        user:
-          $ref: "#/components/schemas/User"
-      required: [id, recommendationId]
   responses:
     Unauthorized:
       description: User is not authorized.
@@ -271,11 +258,10 @@ components:
             type: object
             properties:
               success:
+                type: boolean
                 const: false
               message:
                 type: string
-              data:
-                type: "null"
   parameters:
     RecommendationIdPath:
       name: id
