# app.py
@@ -2,7 +2,15 @@ import json
 
 import identity
 import identity.web
-from flask import Flask, redirect, request, send_file, session, url_for
+from flask import (
+    Flask,
+    make_response,
+    redirect,
+    request,
+    render_template,
+    session,
+    url_for,
+)
 from werkzeug.middleware.proxy_fix import ProxyFix
 
 import app_config
@@ -23,13 +31,21 @@ auth = identity.web.Auth(
 )
 
 
+def _unauthorized():
+    return make_response(
+        json.dumps({'success': False, 'message': 'User is not logged in'}), 401
+    )
+
+
 @app.route('/')
 def home():
-    return send_file('static/index.html')
+    return render_template('index.html', user=auth.get_user())
 
 
 @app.route('/api/auth')
 def auth_root():
+    if request.args.get('returnUrl'):
+        session['return_url'] = request.args.get('returnUrl')
     return redirect(
         auth.log_in(
             scopes=app.config['SCOPE'],
@@ -38,15 +54,37 @@ def auth_root():
     )
 
 
-@app.route('/api/auth/status')
-def auth_status():
-    return json.dumps(auth.get_user())
-
-
 @app.route('/api/auth/callback')
 def auth_callback():
     res = auth.complete_log_in(request.args)
-    return redirect('/api/auth/status')
+    assert res
+    if 'error' in res:
+        session['auth_error'] = res
+    if 'return_url' in session and session['return_url']:
+        url = session.pop('return_url')
+        return redirect(url)
+    return redirect(url_for('home'))
+
+
+@app.route('/api/me')
+def me():
+    user = auth.get_user()
+    if user is None:
+        return _unauthorized()
+    if 'name' not in user:
+        return make_response(
+            json.dumps({'success': False, 'message': 'User name not found'}), 401
+        )
+    if 'email' not in user:
+        return make_response(
+            json.dumps({'success': False, 'message': 'User email not found'}), 401
+        )
+    data = {
+        'success': True,
+        'message': '',
+        'data': {'name': user['name'], 'email': user['email']},
+    }
+    return json.dumps(data)
 
 
 if app_config.SESSION_SQLALCHEMY is not None:
